# FeatureTracking

./: CMakeLists.txt  main.cpp
Creating3DObjects/: CMakeLists.txt
Creating3DObjects/src/: cluster_with_roi.cpp
HarrisCornerDetection/: CMakeLists.txt
HarrisCornerDetection/src/: corner_harris.cpp
IntensityGradientAndFiltering/gradient_filtering/: CMakeLists.txt
IntensityGradientAndFiltering/gradient_filtering/src/: gaussian_smoothing.cpp  gradient_sobel.cpp  magnitude_sobel.cpp
TTC-camera/: CMakeLists.txt
TTC-camera/src/: compute_ttc_camera.cpp  structIO.cpp  structIO.hpp
TTC-lidar/: CMakeLists.txt
TTC-lidar/src/: compute_ttc_lidar.cpp  dataStructure.h  structIO.cpp  structIO.hpp
descriptor_matching/: CMakeLists.txt
descriptor_matching/src/: desc_match.cpp
detect_keypoints/: CMakeLists.txt
detect_keypoints/src/: detect_kpts.cpp
lidar_to_camera/: CMakeLists.txt
lidar_to_camera/src/: project_lidar_to_camera.cpp  show_lidar_top_view.cpp
